--- a/css/fixed.css
+++ b/css/fixed.css
@@ -1,6 +1,6 @@
 /* Show it is fixed to the top */
 body {
-    background-image: url("../img/5.jpg");
+    background-image: url("../images/7.jpg");
 height:100vh;
 background-size:cover;
 background-position:center;
